--- a/templates/passwordform.html
+++ b/templates/passwordform.html
@@ -14,6 +14,8 @@ If you decide it to be safe to use ZeroVault from your current system, please en
 Vault setup passphrase:<br><input type="password" name="password" size="60"><br><br>
 <input type="submit" value="setup">
 </form> 
+<hr><font size="-1"><i>Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
+The ZeroVault source code is available <A HREF="https://github.com/pibara/ZeroVault">here</A></i></font>
 </center>
 </BODY>
 </HTML>
