--- a/templates/rumpeltree.html
+++ b/templates/rumpeltree.html
@@ -81,7 +81,7 @@ Welcome to your personal ZeroVault.<br>
 <h3>Password:</h3>
 <input type="text" id="result" size ="32">
 <hr><font size="-1"><i>Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
-The ZeroVault source code is available <A HREF="">here</A></i></font>
+The ZeroVault source code is available <A HREF="https://github.com/pibara/ZeroVault">here</A></i></font>
 </center>
 </BODY>
 </HTML>
