added revocation list and per site generation rules

--- a/templates/passwordform.html
+++ b/templates/passwordform.html
@@ -1,21 +1,36 @@
-<HTML>
-<HEAD>
-<TITLE>ZeroVault</TITLE>
-</HEAD>
-<BODY>
-<center>
-<H3>ZeroVault</H3>
-<img src="vault.jpg"><br><br>
-This is your first visit to your ZeroVault from your current browser.<br>
-You should <b>NOT EVER</b> use ZeroVault from a public or untrusted system.i<br> 
-If you decide it to be safe to use ZeroVault from your current system, please enter your Vault setup passphrase.
-<br><br>
-<form action="/" method="post">
-Vault setup passphrase:<br><input type="password" name="password" size="60"><br><br>
-<input type="submit" value="setup">
-</form> 
-<hr><font size="-1"><i>Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
-The ZeroVault source code is available <A HREF="https://github.com/pibara/ZeroVault">here</A></i></font>
-</center>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>ZeroVault</title>
+    <style type="text/css">
+      div.c2 {text-align: center}
+      span.c1 {font-size: 80%}
+    </style>
+  </head>
+  <body>
+    <div class="c2">
+       <h3>ZeroVault</h3>
+       <img src="vault.jpg" alt="zerovault"><br>
+       <br>
+       <br>
+       This is your first visit to your ZeroVault from your current browser.<br>
+       You should <strong>NOT EVER</strong> use ZeroVault from a public or untrusted system.i<br>
+       If you decide it to be safe to use ZeroVault from your current system, please enter your Vault setup passphrase.<br>
+       <br>
+       <form action="/" method="post">
+         Vault setup passphrase:<br>
+         <input type="password" name="password" size="60"><br>
+         <br>
+         <input type="submit" value="setup">
+       </form>
+       <hr>
+       <span class="c1">
+          <em>
+            Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
+            The ZeroVault source code is available <a href="https://github.com/pibara/ZeroVault">here</a>
+          </em>
+       </span>
+    </div>
+  </body>
+</html>
