Use meaningful link text rather than _here_.

--- a/templates/passwordform.html
+++ b/templates/passwordform.html
@@ -28,7 +28,7 @@
        <span class="c1">
           <em>
             Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
-            The ZeroVault source code is available <a href="https://github.com/pibara/ZeroVault">here</a>
+            The <a href="https://github.com/pibara/ZeroVault">ZeroVault source code</a> is available.
           </em>
        </span>
     </div>
