--- a/templates/rumpeltree.html
+++ b/templates/rumpeltree.html
@@ -104,7 +104,7 @@ Welcome to your personal ZeroVault.<br>
 <input type="submit" value="Mark above password as compromised">
 </form>
 <hr><font size="-1"><i>Please take proper precausions to assure the secrecy of your usage of ZeroVault.<br>
-The ZeroVault source code is available <A HREF="https://github.com/pibara/ZeroVault">here</A></i></font>
+The <A HREF="https://github.com/pibara/ZeroVault">ZeroVault source code</A> is available.</i></font>
 </center>
 </BODY>
 </HTML>
